Update recent classes

--- a/index.html
+++ b/index.html
@@ -84,9 +84,9 @@
         <div class="section-title">
           <h2>About</h2>
           <p>My name is Luxiao Zheng. I am a Deep Learning Performance Engineer, Inference at NVIDIA. 
-            I was a BSMS student in Washington University in St. Louis majoring in Computer Science. 
-            I earned Master of Science in Computer Science in 2022, Bachelor's of Science in Chemical Engineering and Bachelor of Science in Computer Science in 2021
-            from Washington University in St. Louis with Summa Cumma Laude.
+            I am a BSMS graduate from Washington University in St. Louis. 
+            I earned Master of Science in Computer Science in 2022, Bachelor's of Science in Chemical Engineering and 
+            Bachelor of Science in Computer Science in 2021 with Summa Cumma Laude.
           </p>
         </div>
 
@@ -98,7 +98,6 @@
             <h3>Software Engineer candidate</h3>
             <p class="fst-italic">
               I have tried a lot of different Computer Science topics via WashU curriculum and practicum. 
-              I wish to specialize in C++ Development, Algorithms, Data Science and Computer Systems.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -176,12 +175,13 @@
         <div class="section-title">
           <h2>Skills</h2>
           <p>
+            For my full-time job at NVIDIA, I primarily use Python and PyTorch, and am learning cuda and C++. I developed my skills in Deep Learning algorithms and inference workflow, especially LLM.
             In college curriculum, I have learned and shown my proficiency in programming languages including C++, Python, Java, C and MATLAB.
             and CS topics like data structures and algorithms, OOP, Computer Systems, Operating System, Database Management, Data Science and ML. 
           </p>
           <br>
           <p>
-            Outside of classes, I have hands-on experience in modern software engineering and cloud computing tools, including Linux, git, docker, Kubernetes, AWS, S3 Storage,
+            I have hands-on experience in modern software engineering and cloud computing tools, including PyTorch, Linux, git, docker, Kubernetes, AWS, S3 Storage,
             SQL, dash, Flask, Selenium, Spark, BeautifulSoup, etc from internship experience and personal projects.
           </p>
         </div>
@@ -312,13 +312,15 @@
               <p><em>Washington University in St. Louis, MO</em></p>
               <p>Co-director, Washington University Chemistry Tournament</p>
               <ul>
-                <li>Organize an exec board with 5 committees</li>
-                <li>Host annual tournament with more than 300 high school participants</li>
+                <li>Organized an exec board with 5 committees</li>
+                <li>Hosted annual tournament with more than 300 high school participants</li>
+                <li>Gave speech in 2023 tournament (first in-person after 2019) </li>
               </ul>
               <p>PR chair and treasurer, Asian Music Association</p>
               <ul>
                 <li>Hosted monthly Karaoke events with food and boba.</li>
                 <li>Wrote more than 40 publications and advertisements</li>
+                <li>Active member until 2023</li>
               </ul>
               <p>Member of Alpha Chi Sigma, Chemistry professional fraternity</p>
             </div>
@@ -329,6 +331,11 @@
               <h4>Deep Learning Performance Engineer, Inference</h4>
               <h5>August 2022 - Present</h5>
               <p><em>NVIDIA, Santa Clara, US </em></p>
+              <ul>
+                <li> Debug and investigate TensorRT performance issues. </li>
+                <li> Contribute to <a href="https://github.com/NVIDIA/TensorRT">TensorRT Open-source Software</a></li>
+                <li> Write Large-Language Model inference demo and performance benchmark scripts </li>
+              </ul>
             </div>
             <h3 class="resume-title">Internship Experience</h3>
             <div class="resume-item">
@@ -370,8 +377,7 @@
       <div class="container">
         <div class="section-title">
           <h2>Courses</h2>
-          <p>Here are the list of some courses that I have taken and the methods and concepts that I have learned from the courses. Courses in bold indicates the courses that I have been a Teaching Assistant.
-            The color does not mean anything. It only means that the course website is public and you may click to look at more detailed information.
+          <p>Here are the list of some courses that I have taken and the methods and concepts that I have learned. Courses in bold indicates the courses that I have been a Teaching Assistant.
           </p>
           <p><b>Fun fact:</b> I am good at reciting the course listing, so all the below listing and the major topic description is type-written with no reference.</p>
         </div>
@@ -685,6 +691,7 @@
         </div>
         <h4>Academic Achievements</h4>
         <ul>
+          <li>EECE Graduate Teaching Award, April 2023</li>
           <li>Dean's List all semesters except Spring 2020 due to COVID-19 pandemic</li>
           <li>AIChE Rising Star Award, April 2020</li>
           <li>Fundamentals of Engineering Exam(Chemical Engineering) Passed, August 2020</li>
