Update recent experiences
Signed-off-by: Luxiao Zheng <luxiaozheng@LuxiaodeMacBook-Air.local>

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <nav class="site-nav">
       <a href="#about">About</a>
       <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#publications">Publications</a>
       <a href="#resume">Resume</a>
     </nav>
   </header>
@@ -31,6 +33,22 @@
     <section id="skills">
       <h2>Skills</h2>
       <p>I am currently working on <a href="https://developer.nvidia.com/blog/streamline-llm-deployment-for-autonomous-vehicle-applications-with-nvidia-driveos-llm-sdk/">LLM inference on automotive systems</a>. The tools I use daily for work are Python, C++ and nSightSystems. I am familiar with ONNX, TensorRT, TensorRT-LLM and PyTorch.</p>
+    </section>
+    <section id="projects">
+      <h2>Open Source Projects</h2>
+      <ul>
+        <li><strong><a href="https://github.com/NVIDIA/TensorRT-Edge-LLM">TensorRT-Edge-LLM</a></strong> (Major Contributor) - High-performance, light-weight C++ LLM and VLM Inference Software for Physical AI on NVIDIA Edge platforms.</li>
+        <li><strong><a href="https://github.com/NVIDIA/TensorRT">TensorRT</a></strong> - NVIDIA TensorRT Open-source Software, an SDK for high-performance deep learning inference.</li>
+        <li><strong><a href="https://github.com/NVIDIA/TensorRT-LLM">TensorRT-LLM</a></strong> - TensorRT-LLM provides users with an easy-to-use Python API to define Large Language Models (LLMs) and build TensorRT engines that contain state-of-the-art optimizations to perform inference efficiently on NVIDIA GPUs.</li>
+      </ul>
+    </section>
+    <section id="publications">
+      <h2>Publications</h2>
+      <ul>
+        <li><a href="https://developer.nvidia.com/blog/accelerating-llm-and-vlm-inference-for-automotive-and-robotics-with-nvidia-tensorrt-edge-llm/">Accelerating LLM and VLM Inference for Automotive and Robotics with NVIDIA TensorRT Edge-LLM</a>, NVIDIA Developer Blog</li>
+        <li><a href="https://developer.nvidia.com/blog/streamline-llm-deployment-for-autonomous-vehicle-applications-with-nvidia-driveos-llm-sdk/">Streamline LLM Deployment for Autonomous Vehicle Applications with NVIDIA DRIVE OS LLM SDK</a>, NVIDIA Developer Blog</li>
+      </ul>
+      <p>More posts available on <a href="https://developer.nvidia.com/blog/author/luxiaozheng/">my NVIDIA Developer Blog author page</a>.</p>
     </section>
     <section id="resume">
       <h2>Resume</h2>
